--- a/Calculator 1/styles.css
+++ b/Calculator 1/styles.css
@@ -12,12 +12,13 @@ body {
   background-color: hsl(0, 0%, 15%);
   border-radius: 15px;
   max-width: 500px;
+  border: 5px solid black;
   overflow: hidden;
 }
 #display {
-  width: 100%;
+  width: 92%;
   padding: 20px;
-  font-size: 30px;
+  font-size: 34px;
   text-align: left;
   border: none;
   background-color: hsl(0, 0%, 20%);
@@ -40,6 +41,15 @@ button {
   font-size: 3rem;
   font-weight: bold;
   cursor: pointer;
+}
+
+.set {
+  margin: 40px;
+  border: 14px solid black;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 button:hover {
